# temporal-review-sentiment

./: .env.example  .gitignore  README.md  pyproject.toml  review_sentiment.db
review_sentiment/: __init__.py  activities.py  manage_workflow.py  models.py  reviews.db  run_worker.py  run_workflow.py  storage.py  workflows.py
review_sentiment/aws_client/: __init__.py  comprehend.py
review_sentiment/walmart_client/: api.py  signer.py
tests/: TESTING.md  test_activities.py  test_workflows.py
